all german pages translated

--- a/views/aboutDE.hbs
+++ b/views/aboutDE.hbs
@@ -107,16 +107,16 @@
                     <div class="panel panel-body">
                         <img class="img-responsive" id="mainSelfie" src="Images/FranceMeIrelandRV.jpg">
                         <p>
-                            I am originally from Topeka, Kansas, but it hasn't been "home" for quite some time. From '04-'14 I lived in the Los Angeles & San Diego areas working and attending university. During school, and post graduation, I have lived in Berlin, Paris, and Hangzhou, China. I returned to Kansas in December '16 and subsequently returned to China in order to spend a year teaching web development in English to software engineering students. </p>
+                            Ich komme ursprünglich aus Topeka, Kansas, bin aber seit einiger Zeit nicht mehr zu Hause. Von '04 -'14 lebte ich in den Gebieten Los Angeles und San Diego und besuchte die Universität. Während der Schulzeit und nach dem Abschluss habe ich in Berlin, Paris, und Hangzhou, China, gelebt. Im Dezember 16 kehrte ich nach Kansas zurück und kehrte anschließend nach China zurück, um ein Jahr lang Studenten der Softwaretechnik die Webentwicklung auf Englisch beizubringen. </p>
 
                         <p>
-                            Two of my passions in life are traveling and design. Photography plays a large role in my creative life, and I feel that design is a major avenue in which I can utilize and express my creativity. Web design and the basic ability to create something from nothing inspires me greatly.
+                            Zwei meiner Leidenschaften im Leben sind Reisen und Design. Fotografie spielt eine große Rolle in meinem kreativen Leben, und ich bin der Meinung, dass Design eine wichtige Möglichkeit ist, meine Kreativität zu nutzen und zum Ausdruck zu bringen. Webdesign und die grundlegende Fähigkeit, etwas aus dem Nichts zu erschaffen, inspirieren mich sehr.
                         </p>
                         <p>
-                            During my time abroad I managed to visit 24 different countries
-                            and 50 major cities. I can speak French and German with relative proficiency and I am currently working to improve my Chinese. I became more serious about photography after my study abroad program
-                            in 2011, and I believe it has expanded my skills of creativity in the process. I have advanced my skills through practice and perseverance
-                            and have won several awards for my work. Design in a broad sense is something that not only inspires me, but pushes me to always be thinking of new ways, methods, and insights into my own creativity that I never knew existed before. </p>
+                            Während meiner Auslandszeit habe ich 24 verschiedene Länder besucht
+                             und 50 Großstädte. Ich kann relativ gut Französisch und Deutsch sprechen und arbeite derzeit daran, mein Chinesisch zu verbessern. Nach meinem Auslandsstudium habe ich mich mehr mit Fotografie beschäftigt
+                             2011, und ich glaube, es hat meine Kreativität in diesem Prozess erweitert. Ich habe meine Fähigkeiten durch Übung und Ausdauer erweitert
+                             und habe mehrere Preise für meine Arbeit gewonnen. Design im weiteren Sinne inspiriert mich nicht nur, sondern bringt mich dazu, immer wieder über neue Wege, Methoden und Einsichten in meine eigene Kreativität nachzudenken, von denen ich vorher nie wusste, dass es sie gibt. </p>
 
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                                 <br />
                                 Juni 2018 - Juni 2019
                                 <br />
-                                I formulated, implemented, and managed my own curriculum covering the basics of HTML5, CSS3, Javascript, and JQuery in the English language. My students were majoring in software engineering and thusly it was important for them to acquire essential language skills in both coding and communication.
+                                Ich formulierte, implementierte und verwaltete meinen eigenen Lehrplan, der die Grundlagen von HTML5, CSS3, Javascript und JQuery in englischer Sprache abdeckte. Meine Studenten hatten einen Schwerpunkt in Software-Engineering und daher war es wichtig, dass sie wesentliche Sprachkenntnisse sowohl in der Codierung als auch in der Kommunikation erlangten.
                             </li>
                             <br />
                             <li class="list-inline-item" id="UCSD">
@@ -184,7 +184,7 @@
                                 <br />
                                 Juni 2017 - Mai 2018
                                 <br />
-                                During the course of the program we studied, utilized, and developed essential elements of of websites as well as entire websites based on those elements. The program was comprehensive and progressive so that we learned the basic building blocks of a website then worked our way up to building entire websites utilizing all of those elements working collaboratively.
+                                Im Verlauf des Programms haben wir wesentliche Elemente von Websites sowie ganze Websites, die auf diesen Elementen basieren, untersucht, genutzt und entwickelt. Das Programm war umfassend und fortschrittlich, so dass wir die Grundbausteine einer Website lernten und uns dann daran arbeiteten, ganze Websites unter Verwendung all dieser Elemente zusammen zu bauen.
                             </li>
                             <br />
                             <li class="list-inline-item" id="FullColl">
