--- a/views/educationDE.hbs
+++ b/views/educationDE.hbs
@@ -113,7 +113,9 @@
                     <ul style="list-style-type:disc;">
                         <li>Coding Boot Camp</li>
                         <li>Juni 2017-Mai 2018</li>
-                        <li>Intensive 52 week full-stack coding program designed to give students knowledge on a vast array of coding languages as well as constant hands-on experience building their own web apps.</li>
+                        <li>
+                            Intensives 52-wöchiges Full-Stack-Codierungsprogramm, das den Schülern Kenntnisse in einer Vielzahl von Codierungssprachen sowie ständige praktische Erfahrung beim Erstellen eigener Web-Apps vermittelt.
+                        </li>
                         <ul>
                 </div>
             </div>
@@ -132,7 +134,7 @@
                     <ul style="list-style-type:disc;">
                         <li>Bachelor of Arts</li>
                         <li>September 2012-August 2014</li>
-                        <li>My studies at UCSD consisted heavily of languages, history, and politics. I studied German and French throughout my tenure at UCSD while also obtaining a minor certification in international relations.</li>
+                        <li>Mein Studium an der UCSD bestand hauptsächlich aus Sprachen, Geschichte und Politik. Ich habe während meiner Amtszeit an der UCSD Deutsch und Französisch studiert und auch eine geringfügige Zertifizierung in internationalen Beziehungen erhalten.</li>
                     </ul>
                 </div>
             </div>
