--- a/views/experienceDE.hbs
+++ b/views/experienceDE.hbs
@@ -103,13 +103,13 @@
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="zjutlogo" src="../Images/zjutlogo.png">
                     <div class="card-title">
-                        Zhejiang University of Technology/浙江工业大学
+                        Technische Universität von Zhejiang/浙江工业大学
                     </div>
                         <div class="card-body">
                             <ul style="list-style-type:disc;">
-                                <li>Professor - English & Web Development</li>
-                                <li>May 2018-May 2019</li>
-                                <li>I taught a total of 160 university students the basics of web development in English.  Langauges covered were primarily HTML5, CSS3, Javascript, and JQuery.  It was important for the students to learn both coding and the eseentials of English concurrently as one cannot code in Chinese.
+                                <li>Professor für Englisch und Webentwicklung</li>
+                                <li>Mai 2018-Mai 2019</li>
+                                <li>Insgesamt habe ich 160 Studenten die Grundlagen der Webentwicklung auf Englisch beigebracht. Die behandelten Sprachen waren hauptsächlich HTML5, CSS3, Javascript und JQuery. Für die Schüler war es wichtig, gleichzeitig sowohl das Kodieren als auch die Grundkenntnisse des Englischen zu erlernen, da man nicht auf Chinesisch kodieren kann.
                                 </li>
                             </ul>
                         </div>
@@ -122,13 +122,14 @@
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="jayhawklogo" src="../Images/jayhawklogo.jpg">
                     <div class="card-title">
-                        Kansas University
+                        Universität von Kansas
                     </div>
                         <div class="card-body">
                             <ul style="list-style-type:disc;">
-                                <li>Student - Full-Stack Web Development Program</li>
-                                <li>June 2017-May 2018</li>
-                                <li>This program consisted of roughly 52 weeks of learning the essentials of full-stack web development.  As the course progressed students built upon what they learned and our projects became increasingly more complex.  Beyond a regular coding program, we had already completed several individual and group projects prior to the end of the course so that we had as close to real-world experience as possible.
+                                <li>Student - Full-Stack-Webentwicklungsprogramm</li>
+                                <li>Juni 2017-Mai 2018</li>
+                                <li>
+                                    Dieses Programm bestand aus ungefähr 52 Wochen, in denen die Grundlagen der Full-Stack-Webentwicklung erlernt wurden. Im Verlauf des Kurses bauten die Studenten auf dem Gelernten auf und unsere Projekte wurden immer komplexer. Neben einem regulären Programmierprogramm hatten wir bereits vor Kursende mehrere Einzel- und Gruppenprojekte abgeschlossen, um möglichst praxisnahe Erfahrungen zu sammeln.
                                 </li>
                             </ul>
                         </div>
