--- a/views/videoDE.hbs
+++ b/views/videoDE.hbs
@@ -104,7 +104,7 @@
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available" height="251px" src="https://www.youtube.com/embed/JAaR5Rurdf4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Zhangjiajie National Forest Park by Drone (2016)</p>
+                        <p id="card-text">Zhangjiajie National Forest Park von Drone (2016)</p>
                     </div>
             </div></a>
         </div>
@@ -150,7 +150,7 @@
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/Q2_wPRxTdUo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Euro College: Paris Study Abroad Introduction (2012)</p>
+                        <p id="card-text">Euro College: Einführung in Paris Study Abroad (2012)</p>
                     </div>
             </div></a>
         </div>
@@ -160,7 +160,7 @@
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/1kc-M1j0bS8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Fear and Loathing in Las Vegas Project (2010)</p>
+                        <p id="card-text">Angst und Abscheu in Las Vegas Project (2010)</p>
                     </div>
             </div></a>
         </div>
