--- a/views/photoDE.hbs
+++ b/views/photoDE.hbs
@@ -107,7 +107,7 @@
                     <img class="card-img-top img-fluid" id="shellHaus" src="../Images/BerlinShellhausdoneOrange2.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                The "Shell-Haus" in Berlin with some changed colors and modified in a way that makes it take on a completely different identity.
+                                Das "Shell-Haus" in Berlin mit einigen veränderten Farben und Modifikationen, die es zu einer völlig anderen Identität machen.
                             </p>
                         </div>
                 </div>
@@ -129,7 +129,7 @@
                     <img class="card-img-top img-fluid" id="HKLights" src="../Images/CNHKNightStreaks.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                Busy criss-crossing streets in Hong Kong at night provide for a beautiful setting of streaks and skyscrapers.
+                                Belebte, kreuz und quer verlaufende Straßen in Hongkong bei Nacht sorgen für eine wunderschöne Kulisse aus Streifen und Wolkenkratzern.
                             </p>
                         </div>
                 </div>
@@ -151,7 +151,7 @@
                     <img class="card-img-top img-fluid" id="DieWelle" src="../Images/DEDieWelle2.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                An office building in Hamburg, Germany known as "Die Welle" (The Wave).  It was a beautiful and interesting building to photograph and easily missed if one doesn't know its location.
+                                Ein Bürogebäude in Hamburg, bekannt als "Die Welle". Es war ein wunderschönes und interessantes Gebäude zum Fotografieren und leicht zu übersehen, wenn man seinen Standort nicht kennt.
                             </p>
                         </div>
                 </div>
@@ -173,7 +173,7 @@
                     <img class="card-img-top img-fluid" id="Singel" src="../Images/NLAmsterdamCanalScape2.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                An area in Amsterdam known as "Singel" and is near the heart of the city.  The colors at night along with the houseboats and reflection from the canal are simply awesome.
+                               Eine Gegend in Amsterdam, die als "Singel" bekannt ist und sich in der Nähe des Stadtzentrums befindet. Die Farben in der Nacht zusammen mit den Hausbooten und dem Spiegelbild des Kanals sind einfach fantastisch.
                             </p>
                         </div>
                 </div>
@@ -200,7 +200,7 @@
                 <img class="card-img-top img-fluid" id="redHat" src="../Images/KoreanHat.jpg">
                     <div class="mask flex-center rgba-blue-strong">
                         <p class="white-text">
-                            A friend of mine with her back turned to the camera wearing a bright red hat.
+                            Eine Freundin von mir wandte sich mit dem Rücken zur Kamera und trug einen knallroten Hut.
                         </p>
                     </div>
             </div>
@@ -222,7 +222,7 @@
                     <img class="card-img-top img-fluid" id="HorseShoe" src="../Images/AZHSBHDR.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                Located near the famous Antelope Canyon this spot is known as Horseshoe Bend in northern Arizona.
+                                In der Nähe des berühmten Antelope Canyon gelegen, ist dieser Ort als Horseshoe Bend im Norden von Arizona bekannt.
                             </p>
                         </div>
                 </div>
@@ -244,7 +244,7 @@
                     <img class="card-img-top img-fluid" id="Tron" src="../Images/CNTron.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                A building named the "White Horse Convention Center" in Hangzhou, China is illuminated in a way that invokes memories of the movie Tron.
+                                Ein Gebäude mit dem Namen "White Horse Convention Center" in Hangzhou, China, wird auf eine Weise beleuchtet, die Erinnerungen an den Film Tron weckt.
                             </p>
                         </div>
                 </div>
@@ -266,7 +266,7 @@
                     <img class="card-img-top img-fluid" id="Kanzler" src="../Images/BerlinWashingMachineRV.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                The Bundeskanzleramt in Berlin, Germany where the Chancellor of Germany works.  This part of the building is known as the "Washing Machine" due to its circular nature.
+                                Das Bundeskanzleramt in Berlin, wo der Bundeskanzler arbeitet. Dieser Gebäudeteil wird aufgrund seiner Kreisform als "Waschmaschine" bezeichnet.
                             </p>
                         </div>
                 </div>
@@ -293,7 +293,7 @@
                 <img class="card-img-top img-fluid" id="Groningen" src="../Images/NLGroningenColors1.jpg">
                     <div class="mask flex-center rgba-blue-strong">
                         <p class="white-text">
-                            Some colored houses with a great reflection near a shopping mall in the small Dutch city of Groningen.
+                            Einige farbige Häuser mit einer großen Reflexion nahe einem Einkaufszentrum in der kleinen niederländischen Stadt von Groningen.
                         </p>
                     </div>
             </div>
@@ -315,7 +315,7 @@
                     <img class="card-img-top img-fluid" id="Macau" src="../Images/MacauGreenTwist.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                A random apartment building in Macau taken in a vertical panorama style causing the edges to extrude a bit.
+                                Ein zufälliges Mehrfamilienhaus in Macau im vertikalen Panorama-Stil, bei dem die Ränder etwas herausragen.
                             </p>
                         </div>
                 </div>
@@ -337,7 +337,7 @@
                     <img class="card-img-top img-fluid" id="Crucifix" src="../Images/MacauFlyingCrucifix3.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                Another random apartment building shot from inside the courtyard in Macau.  The buildings above looked very interesting and seem to form a crucifix.
+                                Ein weiteres Wohnhaus wurde zufällig aus dem Innenhof in Macau heraus erschossen. Die Gebäude oben sahen sehr interessant aus und scheinen ein Kruzifix zu bilden.
                             </p>
                         </div>
                 </div>
@@ -359,7 +359,7 @@
                     <img class="card-img-top img-fluid" id="Dunes" src="../Images/COSandDunesBeerBackpack.jpg">
                         <div class="mask flex-center rgba-blue-strong">
                             <p class="white-text">
-                                A photo of my camera backpack with traveling beer at the Great Sand Dunes outside of Alamosa, Colorado.
+                                Ein Foto meines Kamerarucksacks mit reisendem Bier in den Great Sand Dunes außerhalb von Alamosa, Colorado.
                             </p>
                         </div>
                 </div>
