--- a/views/skillsCN.hbs
+++ b/views/skillsCN.hbs
@@ -70,13 +70,13 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contact"><span class="flag-icon flag-icon-us"></span></a>
+            <a class="nav-link" href="/skills"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contactDE"><span class="flag-icon flag-icon-de"></span></a>
+            <a class="nav-link" href="/skillsDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contactFR"><span class="flag-icon flag-icon-fr"></span></a>
+            <a class="nav-link" href="/skillsFR"><span class="flag-icon flag-icon-fr"></span></a>
         </li>
     </ul>
     <!-- Links -->
