--- a/views/webPortCN.hbs
+++ b/views/webPortCN.hbs
@@ -73,7 +73,7 @@
             <a class="nav-link" href="/webPort"><span class="flag-icon flag-icon-us"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link" href="/contactDE"><span class="flag-icon flag-icon-de"></span></a>
+            <a class="nav-link" href="/webPortDE"><span class="flag-icon flag-icon-de"></span></a>
         </li>
         <li class="nav-item list-item-inline">
             <a class="nav-link" href="/webPortFR"><span class="flag-icon flag-icon-fr"></span></a>
